--- a/css/survey.css
+++ b/css/survey.css
@@ -10,26 +10,33 @@ form {
   text-align: left;
   display: inline-block;
 }
-input[type=text], textarea {
+input[type=text],
+input[type=email],
+ textarea {
   -webkit-transition: all 0.30s ease-in-out;
   -moz-transition: all 0.30s ease-in-out;
   -ms-transition: all 0.30s ease-in-out;
   -o-transition: all 0.30s ease-in-out;
   outline: none;
   padding: 3px 0px 3px 3px;
-  margin: 5px 1px 3px 0px;
+  margin: 5px 1px 3px 3px;
   border: 1px solid #DDDDDD;
+  width: 80%;
 }
 
-input[type=text]:focus, textarea:focus {
+input[type=text]:focus,
+input[type=email]:focus,
+textarea:focus {
   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
   padding: 3px 0px 3px 3px;
   margin: 5px 1px 3px 0px;
   border: 1px solid rgba(81, 203, 238, 1);
 }
+
 fieldset {
   border: none;
   text-align: left;
+  display: block;
 }
 
 .container{
@@ -37,7 +44,9 @@ fieldset {
 }
 .newsletter{
   text-align: right;
-
+}
+button {
+  width: 60%;
 }
 
 
