--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,7 @@ a {
 }
 
 a:hover {
-  /*color: #999;*/
-  fill: red;
+  color: #999;
 }
 
 /* Section Styles */
@@ -77,7 +76,7 @@ header {
 header p {
   padding-top: 5em;
   font-size: 2em;
-  color: black;
+  color: #2E0854;
 }
 
 .tag {
@@ -128,7 +127,7 @@ header .name{
 }
 h1{
   font-size: 6em;
-  color: black;
+  color: #2E0854;
   position: absolute;
   width: 100%;
   z-index: 1;
